[package]
name = "sparsestate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = { version = "1.3.0", default-features = false }
alloy-trie = { version = "0.9.0", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }

reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

revm-bytecode = { version = "6.0.1", default-features = false }

mpt = { path = "../mpt" }

[lints]
workspace = true
